Mismatch in rebuild policy and collection set chooser causes remembered sets to be kept errorneously

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • gc
    • b18

        A mismatch in the rebuild policy to select regions for remembered set rebuild and collection set chooser causes the latter to not clear out remembered sets for some old gen regions.

        I.e. the rebuild policy basically only selects by liveness, but the collection set chooser selects and discards only regions which marking were updated.

        This makes regions that were allocated during marking, that were selected for rebuild during remark (because e.g. due to fragmentation they were "half-empty"), to not be part of the set of regions to be looked at in the collection set chooser, and hence their remembered set not cleared out if applicable.

        This is a memory/performance issue as these regions keep being maintained for longer than necessary.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: