8204081: Mismatch in rebuild policy and collection set chooser causes remembered sets to be kept errorneously

Due to mismatch in which region's remembered sets should be rebuilt and the ones that are looked at in the collection set chooser superfluous remembered sets might be built and kept alive until the next marking.

Reviewed-by: sjohanss, kbarrett